[package]
name = "rhythm_typer_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_egui = "0.27"
bevy_kira_audio = { version = "0.19", features = ["mp3", "wav", "ogg", "flac"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rfd = "0.14"
zip = "0.6"
